[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mattermost-py"
version = "0.1.0"
authors = [
  { name="Anshul Thakur", email="anshulthakurjourneyendless@gmail.com" },
]
description = "A Python client for Mattermost incoming webhooks."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "aiohttp",
]

[project.urls]
"Homepage" = "https://github.com/anshulthakur/mm-py-webhooks"
"Bug Tracker" = "https://github.com/anshulthakur/mm-py-webhooks/issues"
